renamed Organization to Brewery

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -51,8 +51,8 @@ services:
         resource: '../tests/DataFixtures'
         public: true
 
-    Beeriously\Application\Organization\Listeners\:
-        resource: '../src/Application/Organization/Listeners'
+    Beeriously\Brewery\Infrastructure\Listeners\:
+        resource: '../src/Brewery/Infrastructure/Listeners'
 
 
 
