--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "friendsofphp/php-cs-fixer": "^2.8",
     "phpstan/phpstan": "^0.9.2",
     "phpunit/phpunit": "^6.4",
+    "sauce/sausage": "^0.17.0",
     "symfony/dotenv": "^4.0",
     "symfony/flex": "^1.0",
     "symfony/web-server-bundle": "^4.0"
