--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "behat/symfony2-extension": "^2.1",
     "friendsofphp/php-cs-fixer": "^2.8",
     "phpstan/phpstan": "^0.9.2",
+    "phpunit/phpcov": "^4.0",
     "phpunit/phpunit": "^6.4",
     "sauce/sausage": "^0.17.0",
     "symfony/dotenv": "^4.0",
