--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
   "type": "project",
   "license": "AGPL-3.0-only",
   "require": {
-    "php": "^7.1.0",
+    "php": "^7.2.0",
     "behat/mink-extension": "^2.3",
     "behat/mink-goutte-driver": "^1.2",
     "behat/mink-selenium2-driver": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
+    "eventsauce/eventsauce": "^0.3",
     "friendsofsymfony/user-bundle": "^2.0",
     "jms/i18n-routing-bundle": "^3.0",
     "jolicode/gif-exception-bundle": "^1.4",
