--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,19 +1,20 @@
-controllers:
-    resource: ../src/Controller/
-    type: annotation
-
 brewery:
     resource: ../src/Brewery/Infrastructure/Controller/
+    type: annotation
+
+calculations:
+    resource: ../src/Calculations/Infrastructure/Controller/
+    type: annotation
+
+dashboard:
+    resource: ../src/Dashboard/Infrastructure/Controller/
+    type: annotation
+
+langauge:
+    resource: ../src/Infrastructure/Language/Controller/
     type: annotation
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
-#redirecting the homepage
-homepage:
-    path: /
-    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirectAction
-    options: { i18n: false }
-    defaults:
-        route: dashboard
-        permanent: false
+
