--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.17.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "4.0.0-beta.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "sass-loader": "^6.0.6",
     "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
   },
