wip: add brewer

--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -9,3 +9,5 @@ fos_user:
   registration:
     form:
       type: Beeriously\Brewer\Infrastructure\Registration\Form\RegistrationForm
+    confirmation:
+      enabled: true
