--- a/.env.dist
+++ b/.env.dist
@@ -19,5 +19,5 @@ DATABASE_URL=postgres://postgres:64ounces@postgres:5432/beeriously
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://mailcatcher:1025
 ###< symfony/swiftmailer-bundle ###
