--- a/config/packages/php_translation.yaml
+++ b/config/packages/php_translation.yaml
@@ -1,5 +1,5 @@
 translation:
-    locales: ["en", "de"]
+    locales: ["us", "de"]
     symfony_profiler: # must be placed in config_dev.yml
         enabled: true
     webui:
