--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       environment:
         POSTGRES_PASSWORD: 64ounces
       ports:
-        - "127.0.0.1:62342:5432"
+        - "127.0.0.1:62338:5432"
 
     webserver:
       image: nginx:alpine
@@ -16,7 +16,7 @@ services:
           - .:/application
           - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       ports:
-       - "62337:80"
+       - "127.0.0.1:62337:80"
 
     php-fpm:
       build:
@@ -41,8 +41,13 @@ services:
       volumes:
         - .:/application:cached
       ports:
-        - "62339:5900"
+        - "127.0.0.1:62339:5900"
 
     sauce-tunnel:
       image: henrrich/docker-sauce-connect
       command: ["-u", "user", "-k", "uuid-key"]
+
+    mailcatcher:
+      image:  schickling/mailcatcher
+      ports:
+        - "127.0.0.1:62340:1080"
