--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
+brewer:
+    resource: ../src/Brewer/Infrastructure/Controller/
+    type: annotation
+
 brewery:
     resource: ../src/Brewery/Infrastructure/Controller/
     type: annotation
