wip: brewer profile settings

--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,18 @@
   "license": "AGPL-3.0-only",
   "require": {
     "php": "^7.2.0",
+    "aws/aws-sdk-php": "^3.66",
     "behat/mink-extension": "^2.3",
     "behat/mink-goutte-driver": "^1.2",
     "behat/mink-selenium2-driver": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
     "eventsauce/eventsauce": "^0.3",
     "friendsofsymfony/user-bundle": "^2.0",
+    "guzzlehttp/guzzle": "^6.3",
     "jms/i18n-routing-bundle": "^3.0",
     "jolicode/gif-exception-bundle": "^1.4",
+    "ornicar/gravatar-bundle": "^1.3",
+    "p3k/emoji-detector": "^0.2.1",
     "php-translation/symfony-bundle": "^0.6.1",
     "ramsey/uuid": "^3.7",
     "sensio/framework-extra-bundle": "^5.0",
