--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,5 +40,5 @@ security:
         - { path: '^/([a-z]+)/register', role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/([a-z]+)/resetting', role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/([a-z]+)/choose-language', role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: '^/([a-z]+)/admin/_trans', role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: '^/([a-z]+)/admin/_trans', role: ROLE_TRANSLATOR }
         - { path: '^/([a-z]+)/', role: ROLE_USER }
