Change brewer name, grab avatar from gravatar and place in storage  (#64)
Change brewer password, change brewer name. Grab avatar from gravatar and place in storage Closes #58. Closes #56. Closes #57.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,7 +5,9 @@ security:
         Beeriously\Brewer\Application\Brewer: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_OWNER_OF_BREWERY_ACCOUNT: ROLE_BREWER
+        ROLE_BREWER: ROLE_USER
+        ROLE_ADMIN: ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
@@ -38,5 +40,5 @@ security:
         - { path: '^/([a-z]+)/register', role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/([a-z]+)/resetting', role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/([a-z]+)/choose-language', role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: '^/([a-z]+)/admin/_trans', role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: '^/([a-z]+)/admin/_trans', role: ROLE_TRANSLATOR }
         - { path: '^/([a-z]+)/', role: ROLE_USER }
