--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ docker-compose.override.yml
 /public/bundles/
 /var/
 /vendor/
+/local/
 ###< symfony/framework-bundle ###
 
 ###> symfony/webpack-encore-pack ###
