--- a/.env.dist
+++ b/.env.dist
@@ -21,3 +21,12 @@ DATABASE_URL=postgres://postgres:64ounces@postgres:5432/beeriously
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=smtp://mailcatcher:1025
 ###< symfony/swiftmailer-bundle ###
+
+# S3 Configuration
+IAM_AWS_ACCESS_KEY=
+IAM_AWS_SECRET_KEY=
+S3_BUCKET_PREFIX=https://s3.amazonaws.com/bucket-name/
+S3_REGION=us-east-1
+S3_ENDPOINT=https://s3.amazonaws.com
+S3_BUCKET=bucket-name
+S3_ACL=public-read
