--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
   "require-dev": {
     "behat/symfony2-extension": "^2.1",
     "friendsofphp/php-cs-fixer": "^2.8",
+    "heroku/heroku-buildpack-php": "^144.0",
     "phpstan/phpstan": "^0.9.2",
     "phpunit/phpcov": "^4.0",
     "phpunit/phpunit": "^6.4",
