--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+  },
+  "dependencies": {
     "@symfony/webpack-encore": "^0.17.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "4.0.0-beta.2",
@@ -13,6 +15,5 @@
     "react-dom": "^16.4.1",
     "sass-loader": "^6.0.6",
     "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
-  },
-  "dependencies": {}
+  }
 }
