--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "symfony/validator": "^4.0",
     "symfony/web-profiler-bundle": "^4.0",
     "symfony/webpack-encore-pack": "^1.0",
+    "symfony/web-server-bundle": "^4.0",
     "symfony/yaml": "^4.0"
   },
   "require-dev": {
@@ -46,8 +47,8 @@
     "phpstan/phpstan": "^0.9.2",
     "phpunit/phpcov": "^4.0",
     "phpunit/phpunit": "^6.4",
-    "sauce/sausage": "^0.17.0",
-    "symfony/web-server-bundle": "^4.0"
+    "sauce/sausage": "^0.17.0"
+
   },
   "config": {
     "preferred-install": {
