--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,8 +36,7 @@ services:
         resource: '../src/Infrastructure/Travis'
         tags: ['console.command']
 
-    Beeriously\Tests\DataFixtures\:
-        resource: '../tests/DataFixtures'
+    Beeriously\Tests\DataFixtures\TestUserFixture:
         public: true
 
     Beeriously\Infrastructure\SessionHandler\PdoConnectionDsnProviderInterface:
