--- a/heroku_nginx_app.conf
+++ b/heroku_nginx_app.conf
@@ -8,7 +8,7 @@ location @rewriteapp {
     rewrite ^(.*)$ /index.php/$1 last;
 }
 
-location ~ ^/(app|app_dev|config)\.php(/|$) {
+location ~ ^/index\.php(/|$) {
     try_files @heroku-fcgi @heroku-fcgi;
     internal;
 }
