--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,3 +42,4 @@ security:
         - { path: '^/([a-z]+)/choose-language', role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/([a-z]+)/admin/_trans', role: ROLE_TRANSLATOR }
         - { path: '^/([a-z]+)/', role: ROLE_USER }
+        - { path: '^/([a-z]+)/dev', role: IS_AUTHENTICATED_ANONYMOUSLY }
