--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,7 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             pattern: ^/
             form_login:
@@ -34,6 +35,24 @@ security:
                 target: fos_user_security_login
                 invalidate_session: true
             anonymous:    true
+
+        oauth_token:
+            pattern:    ^/oauth/v2/token
+            security:   false
+
+        oauth_authorize:
+            pattern:    ^/oauth/v2/auth
+            form_login:
+                 provider: database
+                 check_path: /oauth/v2/auth_login_check
+                 login_path: /oauth/v2/auth_login
+                 use_referer: true
+
+        api:
+            pattern:    ^/api
+            fos_oauth:  true
+            stateless:  true
+            anonymous:  true
 
     access_control:
         - { path: '^/([a-z]+)/login', role: IS_AUTHENTICATED_ANONYMOUSLY }
