--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "@symfony/webpack-encore": "^0.17.0",
     "babel-preset-react": "^6.24.1",
@@ -14,6 +13,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "sass-loader": "^6.0.6",
+    "turbolinks": "^5.2.0",
     "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
   }
 }
